Fixed the wrapping of the image to scale all images properly and working on adding a final touch for an animation to show and reveal the original and new image

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -313,3 +313,79 @@ button{
     transform: rotateX(-180deg);
   }
 }
+
+canvas {
+    border: 1px solid #ccc;
+    margin: 20px;
+}
+
+.morph-wrap canvas {
+    margin: 0 !important;
+    background: transparent !important;
+    display: block;
+}
+
+.canvas-slider {
+    position: absolute;
+    left: 50%;
+    bottom: 12px;
+    transform: translateX(-50%);
+    width: 80%;
+    z-index: 10;
+
+    appearance: none;
+    height: 6px;
+    background-color: rgba(255, 255, 255, 0.6);
+    border-radius: 4px;
+    outline: none;
+    opacity: 1;
+
+    animation: slider-reveal 1.5s ease-in-out infinite both;
+}
+
+.canvas-slider:hover {
+    opacity: 15%;
+}
+
+.canvas-slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 16px;
+    height: 16px;
+    background: #000;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.canvas-slider::-moz-range-thumb{
+    width: 16px;
+    height: 16px;
+    background: #000;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+@keyframes slider-reveal {
+    from {
+        transform: scale(1);
+        transform-origin: center center;
+        animation-timing-function: ease-out;
+    }
+    10% {
+    transform: scale(0.91);
+    animation-timing-function: ease-in;
+    }
+    17% {
+    transform: scale(0.98);
+    animation-timing-function: ease-out;
+    }
+    33% {
+    transform: scale(0.87);
+    animation-timing-function: ease-in;
+    }
+    45% {
+    transform: scale(1);
+    animation-timing-function: ease-out;
+    }
+}
